Changelog
=========

0.1a3 (Unreleased)
------------------


0.1a2 (2011-01-25)
------------------

* Fixed to avoid try setting values on read-only fields.
  [deo]

* Improved documentation and usage information.
  [deo]


0.1a1 (2011-01-24)
------------------

* Renamed package to plone.app.stagingbehavior.
  [deo]

* Made sure to fire an IAfterCheckinEvent so that the iterate
  locking handler (handleCheckin) removes the lock from the
  baseline object.
  [deo]

* Added a workaround to allow the checkin operation to succeed.
  Sent message to the mailing list to discuss the issue.
  [deo]

* Fixed to only use the plone.app.stagingbehavior policy for Dexterity
  content, avoiding any interference with Archetypes content.
  [deo]

* Removed dependency to plone.relations, made some cleanups.
  [jbaumann]

* Added creator attribute to the StagingRelationValue.
  [jbaumann]

* Fixed AttributeError processForm in checkin.
  [jbaumann]

* Implemented simple checkin process, which just copies all field values.
  [jbaumann]

* Cleaned up the code a little bit.
  [jbaumann]

* First implementation.
  [jbaumann]