@@ -1,5 +1,6 @@
 <configure
         xmlns="http://namespaces.zope.org/zope"
+        xmlns:genericsetup="http://namespaces.zope.org/genericsetup"    
         xmlns:grok="http://namespaces.zope.org/grok"
         xmlns:plone="http://namespaces.plone.org/plone">
 
@@ -21,5 +22,15 @@
        for="plone.app.iterate.interfaces.IAfterCheckinEvent"
        handler="plone.app.iterate.subscribers.locking.handleCheckin"
        />
+       
+
+    <genericsetup:registerProfile
+        name="testfixture"
+        title="plone.app.stagingbehavior: Test fixture"
+        directory="profiles/testfixture"
+        description="Extension profile to configure a test fixture"
+        for="Products.CMFPlone.interfaces.ITestCasePloneSiteRoot"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />       
 
 </configure>
