@@ -1,0 +1,4 @@
+<model xmlns="http://namespaces.plone.org/supermodel/schema">
+<schema>
+</schema>
+</model>
