@@ -1,0 +1,4 @@
+<model xmlns="http://namespaces.plone.org/supermodel/schema"
+       xmlns:marshal="http://namespaces.plone.org/supermodel/marshal">
+<schema></schema>
+</model>
